# opqbox2

./: .gitignore  README.md  hello.txt  index.html  params.json
Firmware/: .gdbinit  .gitignore  .syntastic_c_config  .syntastic_cpp_config  .ycm_extra_conf.py  CMakeLists.txt  OPQBox2.5.cogui  OpqBox2.5.coproj  arm-gcc-link.ld  build.gradle  ocd_program.cfg  openocd.cfg
Firmware/gradle/wrapper/: gradle-wrapper.properties
Firmware/openocd/: flash.cfg  gdb.cfg
Firmware/opq/: config.h  main.h
Firmware/src/opq/c/: datastructures.h  main.c  stm32f30x_it.c
Firmware/src/opq/cpp/: config.cpp  main.cpp  main.h
Schematics/: BOM.txt  README.md  hispeed.lst  opq2.sch  opqbox2.pcb  opqbox2.sch  ~$opqbox2.pcb.inf
Schematics/Gerbers/: board-outline.gerber  board_outline.GML  board_outline.rep  bottom-copper.G2L  bottom-copper.GBL  bottom-pastemask.GBP  bottom-silkscreen.GBO  bottom-soldermask.GBS  drill-drawing.gerber  drill.DRL  drill.lst  inner1_copper.G1  inner2_copper.G2  top-copper.GTL  top-pastemask.GTP  top-silkscreen.GTO  top-soldermask.GTS
